test/correct/TypeSyn2.hs
module TypeSyn2 where

type A aap noot mies = (aap, noot, mies)

