test/typeerrors/Examples/KeepTyVarNames.hs
module KeepTyVarNames where

f :: (Int,a) -> aap -> noot -> mies
f = undefined

g :: a -> Bool
g = f
